--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -17,11 +17,11 @@
       %h2 Kind of like
       .movies
         .movie{:title => "Blade Runner"}
-          %img{:src => 'http://ia.media-imdb.com/images/M/MV5BMTkxNTQ5NTI0Ml5BMl5BanBnXkFtZTYwODgzMDc4._V1._SY317_.jpg'}
+          %img{:src => '/images/covers/blade-runner.jpg'}
         .movie{:title => "City of God"}
-          %img{:src => 'http://ia.media-imdb.com/images/M/MV5BMjA4ODQ3ODkzNV5BMl5BanBnXkFtZTYwOTc4NDI3._V1._SY317_.jpg'}
+          %img{:src => '/images/covers/city-of-god.jpg'}
         .movie{:title => "Black Hawk Down"}
-          %img{:src => 'http://ia.media-imdb.com/images/M/MV5BMTc0NTY1NjcyMV5BMl5BanBnXkFtZTcwNjk2MjAyMQ@@._V1._SY317_CR2,0,214,317_.jpg'}
+          %img{:src => '/images/covers/black-hawk-down.jpg'}
       %ul
         %li
           %em Environments
