--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -31,10 +31,10 @@ body {
       background: image-url('/images/asfalt.png');
       // height: 560px;
       margin: 0 0 80px;
-      padding: 20px 0;
+      padding: 20px 0 0;
 
       .cover {
-        background: image-url('/images/book-cover.png') no-repeat 0 100px;
+        background: image-url('/images/book-cover.png') no-repeat 0 80px;
         text-indent: -200%;
         width: 400px;
         height: 520px;
