--- a/source/layout.haml
+++ b/source/layout.haml
@@ -9,6 +9,9 @@
         = yield_content :head
   %body{:class => page_classes}
     #header
+      .container
+        .right
+          %a{:href => '#author'} About the Author
     #wrap
       = yield
     #footer
