--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -9,11 +9,16 @@ body {
   background: #111;
   color: #efefef;
   // margin-bottom: 20px;
-  height: 0;
-  // padding: 10px 0;
+
+  padding: 10px 0;
 }
 
 .container { @include container; }
+
+@mixin framed {
+  @include box-shadow(0 2px 5px rgba(0,0,0, .18));
+  border: 4px solid #fff;
+}
 
 #wrap {
 
@@ -27,8 +32,9 @@ body {
       border-left: none;
       border-right: none;
       background: #2a2a2a;
-      // @include background(linear-gradient(#1e2323, #262f2f));
-      background: image-url('/images/asfalt.png');
+      color: #eaeaea;
+      @include background(linear-gradient(#1a1c1d, #111314));
+      // background: image-url('/images/asfalt.png');
       // height: 560px;
       margin: 0 0 80px;
       padding: 20px 0 0;
@@ -54,8 +60,7 @@ body {
   .movies { margin-bottom: 20px; }
   .movie {
     @include inline-block;
-    @include box-shadow(0 2px 5px rgba(0,0,0, .18));
-    border: 4px solid #fff;
+    @include framed;
     margin-right: 40px;
     position: relative;
     width: 78px;
@@ -81,7 +86,9 @@ body {
     }
   }
 
-  .overview { color: #444; }
+  .overview { border-bottom: 1px solid #ccc;  padding-bottom: 40px; margin-bottom: 40px; }
+  .portrait .image { @include framed; display: block; float: right; }
+
 
 // #wrap {
 
