--- a/source/stylesheets/partials/_fonts.scss
+++ b/source/stylesheets/partials/_fonts.scss
@@ -1,6 +1,6 @@
 $base-font-stack: 'PT Sans','Averia Serif Libre', 'Lora', "Helvetica Neue", Helvetica, Arial, "Liberation Sans", FreeSans, sans-serif;
 $base-font-size: 15px;
-$base-font-color: #e3e3e3;
+$base-font-color: #222;
 $base-line-height: 26px;
 
 $link-color-normal: #50d3e7;
