--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -48,6 +48,25 @@
       %p
         Jogun's capture by the EXOs, the Sedonia paramilitary cops that police the slums, is the spark that lights the fuse. The day is coming when there will be no more fuel to keep the Future running. With Jogun and countless others enslaved to scrape for every last cubic meter, it is Matteo's turn to step up, trust in himself, and unlock a long-buried secret that reaches past the tallest skyscraper...into the stars.
 
+  .container.about-the-author
+    %a#author
+    .text
+      %h2 About the Author
+      %p
+        I was born in 1984 to Les and Patty Chaney, two people whose tireless encouragement, sacrifices, and love helped propel an otherwise shy, fearful boy to the fulfillment of his dreams (this book).
+      %p
+        I first found my creativity in fantasy and sci-fi artwork, beginning with simple childhood scribbles and progressing to advanced digital illustration as a young adult.  It wasn't until my enrollment in the Savannah College of Art and Design's Sequential Art department that my focus shifted, forever, to story.
+      %p
+        But my degree was in art, so as a professional, I moved into the video game industry.  A wonderful, invaluable experience, but the more I learned of the adult world (science, economics, politics, sociology, psychology, philosophy), the more I wanted to make a positive impact elsewhere.  To not only entertain, but to try and say something while doing so.
+      %p
+        This book is my very best attempt.  I hope you enjoy it. :)
+
+    .portrait
+      .image
+        %img{:src => 'http://www.sonofsedonia.com/uploads/1/4/8/5/14852808/910372.jpg?309'}
+
+
+
 :javascript
   $(function(){
     $(".movie").tipTip({'delay': 0});
