--- a/source/layout.haml
+++ b/source/layout.haml
@@ -11,6 +11,13 @@
     #header
       .container
         .right
+          %a.icon-twitter{:href => '#'}
+            %span.title twitter
+            %span.count 100
+          %a.icon-facebook{:href => '#'}
+            %span.title facebook
+            %span.count 20
+        .left
           %a{:href => '#author'} About the Author
     #wrap
       = yield
