--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -1,11 +1,14 @@
-$blueprint-grid-columns: 12;
-$blueprint-grid-width: 60px;
-$blueprint-grid-margin: 20px;
+.container { @include container; }
 
-.col-left { @include column(5); }
-.col-right { @include column(7, true); }
+.col-left { @include column(4); }
+.col-right { @include column(6, true); }
+
+.kind-of-like {
+}
 
 .about-the-author {
-  .text { @include column(7); }
+  .text { @include column(5); }
   .portrait { @include column(5, true);}
 }
+
+.right { float: right; }
