--- a/source/stylesheets/mixins/_buttons.scss
+++ b/source/stylesheets/mixins/_buttons.scss
@@ -12,10 +12,11 @@ $contrasted-lightness-threshold: 50%;
 
 @mixin button($color) {
   @extend %common-button-elements;
-  @include box-shadow(inset 0 1px 0 rgba(255,255,255, .25));
-  @include text-shadow(0 1px 0 contrast-color($color, rgba(255,255,255, .8), rgba(0,0,0, .2)));
-  // @include background(linear-gradient(lighten($color, 10%), darken($color, 10%)));
-  background: $color;
+  @include box-shadow(inset 0 1px 0 rgba(255,255,255, .25),
+                      0 1px 2px rgba(0,0,0, .25));
+  @include text-shadow(0 1px 0 rgba(0,0,0, .8));
+  @include background(linear-gradient(lighten($color, 10%), darken($color, 10%)));
+  // background: $color;
   font-size: 15px;
   font-weight: 400;
   // border: 1px solid darken($color, 20%);
@@ -29,11 +30,11 @@ $contrasted-lightness-threshold: 50%;
 }
 
 .button {
-  @include button(#ddd);
+  @include button(#23997c);
 }
 
 .button-primary {
-  @include button(#d34520);
+  @include button(#495566);
 }
 .button-success {
   @include button(#5bb75b);
