--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -1,19 +1,70 @@
 
 
 body {
-  background: #dbdbdb;
+  background: #2a272b;
   // background: image-url('/images/asfalt.png');
 }
 
 #header {
-  background: #111;
+  @include background(linear-gradient(#3a3a3a, #2a2a2a));
+  @include box-shadow(inset 0 -1px 0 0 rgba(255,255,255, .03),
+                      0 1px 2px rgba(0,0,0, .2));
   color: #efefef;
-  // margin-bottom: 20px;
-
   padding: 10px 0;
-}
+  position: fixed;
+  width: 100%;
+  z-index: 3000;
+  * { text-decoration: none; }
 
-.container { @include container; }
+  .icon-twitter, .icon-facebook {
+    @include inline-block;
+    color: #555;
+    font-weight: normal;
+    margin-bottom: -6px;
+    .title { font-size: 0; }
+    .count {
+      @include box-shadow(inset 0 -1px 0 rgba(255,255,255, .25));
+      @include border-radius(3px);
+      @include inline-block;
+      background: #000;
+      color: #999;
+      font-size: 11px;
+      line-height: 12px;
+      margin-top: -6px;
+      padding: 4px;
+      position: relative;
+      overflow: visible;
+      &:before {
+        content: '';
+        display: block;
+        left: -5px;
+        top: 5px;
+        border-right: 5px solid #000;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        position: absolute;
+        white-space: nowrap;
+      }
+    }
+    &:before {
+      @include text-shadow(0 1px 3px rgba(0,0,0, .25));
+      font-size: 24px;
+      margin: 3px 4px 0 0;
+    }
+
+    &:hover {
+      .count { color: #efefef; }
+      &:before { color: $link-color-normal; }
+    }
+  }
+  .icon-twitter {
+    margin-right: 20px;
+  }
+
+  .icon-facebook {
+
+  }
+}
 
 @mixin framed {
   @include box-shadow(0 2px 5px rgba(0,0,0, .18));
@@ -26,17 +77,10 @@ body {
 
 
     .content-header {
-      @include box-shadow(0 2px 4px rgba(0,0,0, .15),
-                          inset 0 1px 0 rgba(255,255,255, .08),
-                          inset 0 -1px 0 rgba(255,255,255, .1));
       border-left: none;
       border-right: none;
-      background: #2a2a2a;
       color: #eaeaea;
-      @include background(linear-gradient(#1a1c1d, #111314));
-      // background: image-url('/images/asfalt.png');
-      // height: 560px;
-      margin: 0 0 80px;
+      margin: 0 0 10px;
       padding: 20px 0 0;
 
       .cover {
@@ -47,86 +91,68 @@ body {
       }
 
       .col-right {
-        h1 { font-size: 68px; font-weight: bold; }
+        h1 { font-size: 52px; font-weight: bold; }
         h3 { margin-bottom: 16px; }
-        padding-top: 145px;
+        padding-top: 95px;
         font-size: 24px;
       }
-
-      h1 { background: image-url('/images/title.png') no-repeat; text-indent: -200%; }
     }
   }
 
-  .movies { margin-bottom: 20px; }
-  .movie {
-    @include inline-block;
-    @include framed;
-    margin-right: 40px;
-    position: relative;
-    width: 78px;
 
-    &:last-child { margin: 0; }
+  .kind-of-like {
+    @include box-shadow(0 2px 4px rgba(0,0,0, .15),
+                        inset 0 1px 0 rgba(255,255,255, .08),
+                        inset 0 -1px 0 rgba(255,255,255, .1));
+    background: darken(desaturate(#ddddce, 15%), 50%);
+    padding: 20px 0;
+    margin-bottom: 40px;
 
-
-    img { max-width: 78px; }
-
-    &:after {
-      content: '+';
-      color: #aaa;
-      font-size: 40px;
-      font-weight: bold;
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      right: -36px;
-      top: 46px;
+    h2 {
+      display: inline-block;
+      margin-right: 40px;
+      margin-top: 50px;
+      vertical-align: top;
     }
-    &:last-child:after {
-      content: '';
+
+    .movie {
+      @include inline-block;
+      margin-right: 100px;
+      position: relative;
+
+      p .title { font-weight: bold; }
+      .movie-border {
+        @include framed;
+        margin-bottom: 10px;
+        width: 78px;
+
+        img { max-width: 78px; }
+      }
+      &:last-child { margin: 0; }
+      &:after {
+        content: '+';
+        color: #aaa;
+        font-size: 80px;
+        font-weight: bold;
+        position: absolute;
+        width: 60px;
+        height: 20px;
+        right: -80px;
+        top: 56px;
+      }
+      &:last-child:after {
+        content: '';
+      }
     }
   }
 
-  .overview { border-bottom: 1px solid #ccc;  padding-bottom: 40px; margin-bottom: 40px; }
-  .portrait .image { @include framed; display: block; float: right; }
+  .summary {
+    margin-bottom: 40px;
+  }
 
-
-// #wrap {
-
-//   #content {
-
-//     .content-header {
-//       @include box-shadow(0 2px 4px rgba(0,0,0, .15),
-//                           inset 0 1px 0 rgba(255,255,255, .08),
-//                           inset 0 -1px 0 rgba(255,255,255, .1));
-//       border-left: none;
-//       border-right: none;
-//       background: #2a2a2a;
-//       @include background(linear-gradient(#1e2323, #262f2f));
-//       // background: image-url('/images/noisy_net.png');
-//       height: 160px;
-//       margin: 40px 0 80px;
-//       padding: 20px 0;
-//       .container { overflow: visible; }
-
-//       .cover {
-//         position: relative;
-//         text-indent: -200%;
-//         overflow: visible;
-//       }
-//       .cover-img {
-//         overflow: visible;
-//         display: block;
-//         background: image-url('/images/book-cover.png');
-//         position: absolute;
-//         width: 400px;
-//         height: 400px;
-//         top: -100px;
-//         left: 0;
-//       }
-//     }
-//   }
-
-  .content-header .col-right {
-    // margin-top: 100px;
+  .about-the-author {
+    background: rgba(0,0,0, .43);
+    padding: 40px 0;
+    .portrait .image { @include framed; display: block; float: right; }
   }
 }
