--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -2,7 +2,7 @@
 
 body {
   background: #2a272b;
-  // background: image-url('/images/asfalt.png');
+  background: image-url('/images/background.png');
 }
 
 #header {
