--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -53,13 +53,13 @@
       .text
         %h2 About the Author
         %p
-          I was born in 1984 to Les and Patty Chaney, two people whose tireless encouragement, sacrifices, and love helped propel an otherwise shy, fearful boy to the fulfillment of his dreams (this book).
+          Ben Chaney grew up with a passion for SciFi and Fantasy that led him to study visual storytelling and illustration at the Savannah College of Art and Design. After graduation, he worked his way up through the video game industry; QA testing at Epic Games and Redstorm Entertainment, game art production at Schell Games in Pittsburgh, Pennsylvania, then art direction at Villain LLC in Cary, North Carolina.
         %p
-          I first found my creativity in fantasy and sci-fi artwork, beginning with simple childhood scribbles and progressing to advanced digital illustration as a young adult.  It wasn't until my enrollment in the Savannah College of Art and Design's Sequential Art department that my focus shifted, forever, to story.
+          But storytelling had taken a hold of him at SCAD, and manifested in a pet writing project. Often neglected or pushed aside for other things, “Son of Sedonia” grew slowly over six years. Somehow, the image of the boy on the slum rooftop endured. As Ben honed his craft, the world changed. America plunged into recession, political discord, and uncertainty, triggering a desire for information the likes of which Ben hadn’t before experienced. His writing, and this book, matured as he did.
         %p
-          But my degree was in art, so as a professional, I moved into the video game industry.  A wonderful, invaluable experience, but the more I learned of the adult world (science, economics, politics, sociology, psychology, philosophy), the more I wanted to make a positive impact elsewhere.  To not only entertain, but to try and say something while doing so.
+          Video game development had given Ben the confidence in his abilities. What to do with those abilities became impossible to ignore. That and the ceaseless, loving voices around him, all saying the same thing: “Follow your heart.” In June 2012, Ben quit his successful job in game development to do just that.
         %p
-          This book is my very best attempt.  I hope you enjoy it. :)
+          This book is the result.
 
       .portrait
         .image
