--- a/source/stylesheets/partials/_fonts.scss
+++ b/source/stylesheets/partials/_fonts.scss
@@ -47,7 +47,7 @@ h3 { font-size: 1.1em; line-height: 1.4em; margin-bottom: 10px; }
 h4 { font-size: 1.05em; }
 
 // h1,h2,h3,h4 { margin-bottom: .5em; }
-
+p { margin-bottom: 10px; }
 
 em { font-style: italic; }
 strong { font-weight: 700; }
