--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,9 +34,9 @@
           Environments of
           .title Blade Runner
 
+  %a#summary
   .summary
     .container
-
       %h2 Summary
       %p
         In 2080AD Sedonia City has passed its peak, having burned through a thousand years of Helium-3 miracle fuel in less than a hundred. 40 million people swarm together inside the half-mile high Border Wall. As the citizens dwell in their promised Future, every distraction is fed by their Neurals: Social media that can be seen, heard, and touched through the signals of the human brain. But the 20 million people of the Rasalla Slums outside the Border were cut from the Future like an infected limb, falling from recession, into depression, and collapse thirty years before.
