--- a/source/layout.haml
+++ b/source/layout.haml
@@ -19,6 +19,7 @@
             %span.count 20
         .left
           %a{:href => '#author'} About the Author
+          %a{:href => '#summary'} Summary
     #wrap
       = yield
     #footer
