--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,7 +8,9 @@
           Son of Sedonia
       .col-right
         %h1 Son of Sedonia
-        %h3 An indie Sci-Fi novel written, illustrated, and self-published by Ben Chaney
+        %h3
+          An indie Sci-Fi novel written, illustrated, and self-published by
+          %a{:href => '#summary'}Ben Chaney
         .button Buy on Amazon
         .button-primary Free Preview
 
@@ -25,14 +27,14 @@
         .movie-border{:title => "City of God"}
           %img{:src => '/images/covers/city-of-god.jpg'}
         %p
-          Environments of
-          .title Blade Runner
+          Drama of
+          .title City of God
       .movie
         .movie-border{:title => "Black Hawk Down"}
           %img{:src => '/images/covers/black-hawk-down.jpg'}
         %p
-          Environments of
-          .title Blade Runner
+          Action of
+          .title Black Hawk Down
 
   %a#summary
   .summary
