--- a/source/stylesheets/mixins/_buttons.scss
+++ b/source/stylesheets/mixins/_buttons.scss
@@ -17,8 +17,8 @@ $contrasted-lightness-threshold: 50%;
   @include text-shadow(0 1px 0 rgba(0,0,0, .8));
   @include background(linear-gradient(lighten($color, 10%), darken($color, 10%)));
   // background: $color;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: normal;
   // border: 1px solid darken($color, 20%);
   color: contrast-color($color, #222, #efefef);
   cursor: pointer;
