--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -6,9 +6,9 @@ body {
 }
 
 #header {
-  @include background(linear-gradient(#3a3a3a, #2a2a2a));
+  @include background(linear-gradient(#333333, #232323));
   @include box-shadow(inset 0 -1px 0 0 rgba(255,255,255, .03),
-                      0 1px 2px rgba(0,0,0, .2));
+                      0 1px 4px rgba(0,0,0, .4));
   color: #efefef;
   padding: 10px 0;
   position: fixed;
