updating fontawesome, adding urls & facebook/twitter json

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -11,8 +11,8 @@
         %h3
           An indie Sci-Fi novel written, illustrated, and self-published by
           %a{:href => '#summary'}Ben Chaney
-        .button Buy on Amazon
-        .button-primary Free Preview
+        %a.button-amazon{:href => "http://www.amazon.com/Son-of-Sedonia-ebook/dp/B00AO5ID9Q"} Buy on Amazon
+        .button-free Free Preview
 
   .kind-of-like
     .container
@@ -66,10 +66,3 @@
       .portrait
         .image
           %img{:src => 'http://www.sonofsedonia.com/uploads/1/4/8/5/14852808/910372.jpg?309'}
-
-
-
-:javascript
-  / $(function(){
-  /   $(".movie-border").tipTip({defaultPosition: 'top', delay: 0});
-  / });
