--- a/source/layout.haml
+++ b/source/layout.haml
@@ -2,21 +2,24 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-      / Always force latest IE rendering engine (even in intranet) &amp; Chrome Frame
-      %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
-        = stylesheet_link_tag "screen.css", "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Caudex"
-        = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js", "jquery.tipTip.js"
-        = yield_content :head
+    / Always force latest IE rendering engine (even in intranet) &amp; Chrome Frame
+    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    %meta{:name => "author", :content => "Ben Chaney"}
+    %a{:rel => "author", :href => "https://plus.google.com/105149306655131970414"}
+    = stylesheet_link_tag "screen.css", "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Caudex"
+    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js", "jquery.tipTip.js"
+    = yield_content :head
+
   %body{:class => page_classes}
     #header
       .container
         .right
-          %a.icon-twitter{:href => '#'}
+          %a.icon-twitter{:href => 'http://twitter.com/benchaneysos'}
             %span.title twitter
             %span.count 100
-          %a.icon-facebook{:href => '#'}
+          %a.icon-facebook{:href => 'http://www.facebook.com/SonOfSedonia'}
             %span.title facebook
-            %span.count 20
+            %span.count= " "
         .left
           %a{:href => '#author'} About the Author
           %a{:href => '#summary'} Summary
@@ -33,4 +36,15 @@
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+
+        var facebookURL = "https://graph.facebook.com/?ids=sonofsedonia&callback=?"
+        $.getJSON(facebookURL, function(json) {
+          likes = json["sonofsedonia"]["likes"];
+          $(".icon-facebook .count").html(likes);
+        });
+        twitterURL = 'http://twitter.com/users/benchaneysos.json?callback=?';
+        $.getJSON(twitterURL, function(json) {
+          follows = json.followers_count;
+          $(".icon-twitter .count").html(follows);
+        });
       })();
