adding epub and mobi

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -12,7 +12,11 @@
           An indie Sci-Fi novel written, illustrated, and self-published by
           %a{:href => '#summary'}Ben Chaney
         %a.button-amazon{:href => "http://www.amazon.com/Son-of-Sedonia-ebook/dp/B00AO5ID9Q"} Buy on Amazon
-        .button-free Free Preview
+        .button-free
+          .text Free Preview
+          .hovered>
+            %a.epub{:href => "SonofSedonia_Sample.epub"}> ePub
+            %a.mobi{:href => "SonofSedonia_Sample.mobi"}> Mobi
 
   .kind-of-like
     .container
