updating the ben chaney link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,7 +10,7 @@
         %h1 Son of Sedonia
         %h3
           An indie Sci-Fi novel written, illustrated, and self-published by
-          %a{:href => '#summary'}Ben Chaney
+          %a{:href => '#author'}Ben Chaney
         %a.button-amazon{:href => "http://www.amazon.com/Son-of-Sedonia-ebook/dp/B00AO5ID9Q"} Buy on Amazon
         .button-free
           .text Free Preview
