basic modal for cover art

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,8 +4,7 @@
   .content-header
     .container
       .col-left
-        .cover
-          Son of Sedonia
+        %img.cover{:src => "/images/book-cover.png", :rel => "#cover-large"}
       .col-right
         %h1 Son of Sedonia
         %h3
