--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -21,7 +21,7 @@ $blueprint-grid-margin: 20px;
 /* -------------------------------------------------------------
   Vendor
  ------------------------------------------------------------- */
-@import "vendor/tipTip";
+@import "vendor/jquery-tools";
 @import "vendor/font-awesome";
 
 /* -------------------------------------------------------------
