updating author pic

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -68,4 +68,4 @@
 
       .portrait
         .image
-          %img{:src => 'http://www.sonofsedonia.com/uploads/1/4/8/5/14852808/910372.jpg?309'}
+          %img{:src => '/images/author.jpg'}
