trying to setup in-page analytics

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -43,6 +43,7 @@
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-37079356-1']);
+      _gaq.push(['_setDomainName', 'sonofsedonia.com']);
       _gaq.push(['_trackPageview']);
 
       (function() {
