--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -44,13 +44,51 @@
     .container
       %h2 Summary
       %p
-        In 2080AD Sedonia City has passed its peak, having burned through a thousand years of Helium-3 miracle fuel in less than a hundred. 40 million people swarm together inside the half-mile high Border Wall. As the citizens dwell in their promised Future, every distraction is fed by their Neurals: Social media that can be seen, heard, and touched through the signals of the human brain. But the 20 million people of the Rasalla Slums outside the Border were cut from the Future like an infected limb, falling from recession, into depression, and collapse thirty years before.
+        %strong
+          Imagine growing up in the largest slum on the planet in the year 2080AD.
+        Twenty million people are your neighbors, huddled together in an ocean of rusted dwellings made from whatever
+        Sedonia City, the towering metropolis in the distance, decides to throw away. Gang members, known as the T99s,
+        are the heads of your community: smuggling tech, trafficking drugs, and fighting a constant guerilla war with
+        the City’s bio-augmented EXO police force. There is little hope for survival. None for escape to a better life
+        beyond the half-mile high Border between city and slum.
+        %strong
+          This is Matteo’s world.
+        A bright kid, but sick and weak since childhood, he is painfully dependent on Jogun: loving older brother, and
+        hardened soldier for the T99s. When a luxury transport from Sedonia’s aerial traffic crash-lands in Rasalla, it
+        threatens to change Matteo and Jogun’s fate forever. And all fates are connected.
 
       %p
-        Brothers Matteo and Jogun grew up in the scrap, ashes, and dirt of the Rasalla Slums. With their parents long gone and Matteo sick, Jogun had to step up and grab a gun for the T99 gang. Matteo is weak, but he's smart...too smart for his own good. He's asking questions about the past, and stuck on a future among the Sedonia highrises where hunger, sickness, and alienation don't exist. But Jogun believes dreams don't count for much in the war to survive...and that some answers should stay buried. Matteo, totally dependent on the food, meds, and loving protection Jogun brings, has no choice but to obey. Neither of them see the Change just over the horizon.
+        %strong
+          The Dwellers of Rasalla,
+        bound by family in the scrap, ashes, and dirt.
 
       %p
-        Jogun's capture by the EXOs, the Sedonia paramilitary cops that police the slums, is the spark that lights the fuse. The day is coming when there will be no more fuel to keep the Future running. With Jogun and countless others enslaved to scrape for every last cubic meter, it is Matteo's turn to step up, trust in himself, and unlock a long-buried secret that reaches past the tallest skyscraper...into the stars.
+        %strong
+          The Citizens of Sedonia,
+        oblivious to danger in the buzzing twilight of the Neuro-Social Revolution.
+
+      %p
+        %strong
+          The EXOs,
+        placing themselves in harm’s way to perform their duty to protect their homes and fellow officers.
+
+      %p
+        And
+        %strong
+          the Ruling Elite,
+        whose long-buried secrets and desperate plans could spell the end of civilization...or a
+        new beginning.
+
+      %p
+        %strong
+          Son of Sedonia
+        is an action-filled science fiction epic with a soul and a clear message. Its characters live,
+        breathe, suffer, and love in their different worlds, each brought to the brink as the Third-World collides with
+        the First.
+        %strong
+          Their future could well be ours.
+
+
 
   .about-the-author
     .container
