--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,7 +19,7 @@
 
   .kind-of-like
     .container
-      %h2 Compare to
+      %h2 Inspired by
       .movie
         .movie-border
           %img{:src => '/images/covers/blade-runner.jpg'}
